--- a/package.json
+++ b/package.json
@@ -4,24 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "server": "json-server-auth --watch db.json --port 8080",
-    "dev": "concurrently \"npm run start\" \"npm run server\" ",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "concurrently": "^9.2.0",
-    "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-range": "^1.10.0",
-    "react-router": "^7.7.1",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^11.0.5",
     "swiper": "^9.4.1"
   },
