--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-# Logs
+# Переменные окружения
+.env
+.env.local
+.env.*.local
+
+# Логи
 logs
 *.log
 npm-debug.log*
@@ -7,12 +12,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# IDE / OS
 .vscode/*
 !.vscode/extensions.json
 .idea
