--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "lowdb": "^7.0.1",
     "nodemailer": "^6.9.14"
   }
 }
