--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "@supabase/supabase-js": "^2.56.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14"
