--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1",
     "react": "^19.1.1",
