--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,13 @@
   "name": "monkal-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",  
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
